--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -466,7 +466,8 @@
     },
     "LABELER": {
       "MANAGE_LABEL": "Gestisci etichetta",
-      "FILL_IN_DEFAULT_LANGUAGE": "Devi compilare almeno nella lingua di default"
+      "FILL_IN_DEFAULT_LANGUAGE": "Devi compilare almeno nella lingua di default",
+      "EXPLANATION": "Solo la traduzione nella lingua di default è obbligatoria. Se una qualsiasi traduzione è mancante, verrà usata quella nella lingua di default."
     }
   }
 }
