New approach to custom fields

--- a/assets/i18n/idea/en.json
+++ b/assets/i18n/idea/en.json
@@ -259,9 +259,11 @@
       "CHOOSE_A_KEY": "Choose a name for the field",
       "CLOSE_WITHOUT_SAVING": "Close without saving",
       "DEFAULT": "Default value",
+      "DEFAULT_HINT": "The value to assume by default",
       "DESCRIPTION": "Description",
+      "DESCRIPTION_HINT": "Description of how the field should be filled out",
       "DUPLICATED_KEY": "A field with that name already exists",
-      "ENUM": "Choices",
+      "OPTIONS": "Possible choices",
       "FIELDS_TYPES": {
         "BOOLEAN": "Yes / No",
         "ENUM": "Choice",
@@ -272,15 +274,34 @@
       "FIELD_DELETION_ALERT": "The field will be irreversibly deleted",
       "MANAGE_FIELD": "Manage field",
       "MAX": "Maximum",
+      "MAX_HINT": "The highest value the field can have",
       "MIN": "Minimum",
+      "MIN_HINT": "The lowest value the field can have",
       "NAME": "Name",
+      "NAME_HINT": "A name to recognize the field and understand its purpose",
       "NEW_FIELD": "New field",
       "OBLIGATORY": "Obligatory",
-      "OPTIONAL": "Optional",
       "REMOVE_FIELD": "Remove the field",
-      "SAVE": "Save",
       "TYPE": "Type",
-      "UPDATE_FIELD": "Update the field"
+      "SAVE_CHANGES": "Save changes",
+      "ICON": "Icon",
+      "ICON_HINT": "Icon to visually recognize the field",
+      "ADD_OPTION": "Add a choice",
+      "ADD_OPTION_HINT": "Add an option so that the user will be able to choose it to fill out the field",
+      "REMOVE_OPTION": "Remove the choice",
+      "ADD_SECTION": "Add a section",
+      "ADD_SECTION_HINT": "Choose a name for the new section",
+      "MANAGE_SECTION": "Manage section",
+      "ADD_FIELD": "Add a field",
+      "ADD_FIELD_HINT": "Choose a name for the new field",
+      "NO_ELEMENTS": "No elements",
+      "SECTION_FIELDS": "Section fields",
+      "SECTION_NAME_HINT": "The name to identify the section",
+      "SECTION_DESCRIPTION_HINT": "Briefly describe the purpose of the section",
+      "DISPLAY_TEMPLATE": "Print layout",
+      "DISPLAY_TEMPLATE_I": "Customize the layout of the section in the PDF report. Manage multiple rows and add up to three fields inside of each them, in the order you prefer. If a field isn't in the layout, it won't be displayed in the PDF report. Empty rows will be ignored.",
+      "ADD_ROW": "Add a row",
+      "ROW": "Row"
     },
     "DOWNLOAD": { "TAP_TO_DOWNLOAD": "Tap to download the file" },
     "DURATION": { "HH": "hh", "HOURS": "Hours", "MINUTES": "Minutes", "MM": "mm", "SECONDS": "Seconds", "SS": "ss" },
