--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -259,9 +259,11 @@
       "CHOOSE_A_KEY": "Scegli un nome per il campo",
       "CLOSE_WITHOUT_SAVING": "Chiudi senza salvare",
       "DEFAULT": "Valore predefinito",
+      "DEFAULT_HINT": "Il valore da assumere come predefinito",
       "DESCRIPTION": "Descrizione",
+      "DESCRIPTION_HINT": "Descrizione di come il campo dovrebbe essere compilato",
       "DUPLICATED_KEY": "Esiste già  un campo con quel nome",
-      "ENUM": "Scelte",
+      "OPTIONS": "Scelte possibili",
       "FIELDS_TYPES": {
         "BOOLEAN": "Si / No",
         "ENUM": "Scelta",
@@ -269,18 +271,37 @@
         "STRING": "Testuale",
         "TEXT": "Note"
       },
-      "FIELD_DELETION_ALERT": "Il campo verrà  rimosso irrimediabilmente",
+      "FIELD_DELETION_ALERT": "Il campo verrà rimosso irrimediabilmente",
       "MANAGE_FIELD": "Gestisci campo",
       "MAX": "Massimo",
+      "MAX_HINT": "Il massimo valore che può avere il campo",
       "MIN": "Minimo",
+      "MIN_HINT": "Il minimo valore che può avere il campo",
       "NAME": "Nome",
+      "NAME_HINT": "Un nome per riconoscere il campo e capirne lo scopo",
       "NEW_FIELD": "Nuovo campo",
       "OBLIGATORY": "Obbligatorio",
-      "OPTIONAL": "Opzionale",
       "REMOVE_FIELD": "Rimuovi il campo",
-      "SAVE": "Salva",
       "TYPE": "Tipo",
-      "UPDATE_FIELD": "Aggiorna il campo"
+      "SAVE_CHANGES": "Salva i cambiamenti",
+      "ICON": "Icona",
+      "ICON_HINT": "Icona con cui riconoscere visivamente il campo",
+      "ADD_OPTION": "Aggiungi una scelta",
+      "ADD_OPTION_HINT": "Aggiungi un'opzione così che l'utente possa sceglierla per compilare il campo",
+      "REMOVE_OPTION": "Rimuovi la scelta",
+      "ADD_SECTION": "Aggiungi una sezione",
+      "ADD_SECTION_HINT": "Scegli un nome per la nuova sezione",
+      "MANAGE_SECTION": "Gestisci sezione",
+      "ADD_FIELD": "Aggiungi un campo",
+      "ADD_FIELD_HINT": "Scegli un nome per il nuovo campo",
+      "NO_ELEMENTS": "Nessun elemento",
+      "SECTION_FIELDS": "Campi della sezione",
+      "SECTION_NAME_HINT": "Il nome per identificare la sezione",
+      "SECTION_DESCRIPTION_HINT": "Descrivi brevemente lo scopo della sezione",
+      "DISPLAY_TEMPLATE": "Layout di stampa",
+      "DISPLAY_TEMPLATE_I": "Personalizza il layout della sezione nei report PDF. Gestisci multiple righe e disponi un massimo di tre campi in ognuna, nell'ordine che preferisci. Se un campo non è nel layout, non verrà mostrato nel report PDF. Righe vuote verranno ignorate.",
+      "ADD_ROW": "Aggiungi una riga",
+      "ROW": "Riga"
     },
     "DOWNLOAD": { "TAP_TO_DOWNLOAD": "Tocca per scaricare il file" },
     "DURATION": { "HH": "ore", "HOURS": "Ore", "MINUTES": "Minuti", "MM": "min", "SECONDS": "Secondi", "SS": "sec" },
