--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -370,7 +370,7 @@
       "OFFLINE_MANAGER": "Offline manager",
       "REQUEST_FAILED": "Richiesta fallita; riprova o cancella la richiesta",
       "SYNC_IN_PROGRESS": "Sincronizzazione in corso",
-      "SYNC_NOW": "Sincronizza",
+      "SYNC_NOW": "Sync",
       "UPLOAD": "Upload",
       "UPLOAD_QUEUE_REQUESTS_EXPLANATION": "Le azioni create offline devono essere caricate online",
       "YOU_ARE_OFFLINE": "Sei offline",
