--- a/assets/i18n/idea/it.json
+++ b/assets/i18n/idea/it.json
@@ -416,7 +416,9 @@
       "SIGNATORY": "Firmatario",
       "SIGNATURE": "Firma",
       "SIGNATURE_EXPLANATION": "Disegna la firma qui sotto",
-      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica firmatario e firma"
+      "VERIFY_SIGNATORY_AND_SIGNATURE": "Verifica firmatario e firma",
+      "CHOOSE_OR_ADD_A_SIGNATORY": "Scegli o aggiungi un firmatario",
+      "NO_SIGNATORY_FOUND_YOU_CAN_ADD_ONE": "Nessun firmatario trovato; puoi sempre inserirne uno manualmente"
     },
     "STRIPE": {
       "AUTHORIZATION_CHECK_TEXT": "ad inviare istruzioni all'istituto finanziario che ha rilasciato la mia carta per prelevare pagamenti dal mio account, in accordo con i termini del del servizio.",
